Con etiquetas menos linea azul

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -128,74 +128,74 @@
               <!-- Linea roja -->
               <div class="col">
                   <ul class="m-4 l-chil">
-                      <li class="parada linea-r buyuk-desp"><span class="etiquetas">Buyuk</span></li> <!-- Buyuk Ipak Yuli -->
+                      <li class="parada linea-r buyuk-desp"><span class="etiqueta-rbuyuk">Buyuk Ipak Yuli</span></li> <!-- Buyuk Ipak Yuli -->
                       <li class="camino linea-r to-push"></li>
-                      <li class="parada linea-r pushkin-desp"><span class="etiquetas">Pushkin</span></li> <!-- Pushkin -->
+                      <li class="parada linea-r pushkin-desp"><span class="etiqueta-rbuyuk">Pushkin</span></li> <!-- Pushkin -->
                       <li class="camino linea-r to-khamid"></li>
-                      <li class="parada linea-r khamid-desp"><span class="etiquetas">Khamid</span></li> <!-- Khamid Alimjan -->
+                      <li class="parada linea-r khamid-desp"><span class="etiqueta-rbuyuk">Khamid Alimjan</span></li> <!-- Khamid Alimjan -->
                       <li class="camino linea-r to-amir1"></li>
                       <li class="camino linea-r to-amir2"></li>
-                      <li class="parada linea-r"<span class="etiquetas">Amir</span></li> <!-- Amir Temur Hiyoboni -->
+                      <li class="parada linea-r"><span class="etiqueta-ramir">Amir Temur Hiyoboni</span></li> <!-- Amir Temur Hiyoboni -->
                       <li class="camino linea-r"></li>
-                      <li class="parada linea-r"><span class="etiquetas">Mustakillik</span></li> <!-- Mustakillik Maydoni -->
+                      <li class="parada linea-r"><span class="etiqueta-rmayd">Mustakillik Maydoni</span></li> <!-- Mustakillik Maydoni -->
                       <li class="camino linea-r"></li>
-                      <li class="parada linea-r"><span class="etiquetas">Pakhtakor</span></li> <!-- Pakhtakor -->
+                      <li class="parada linea-r"><span class="etiqueta-rpak">Pakhtakor</span></li> <!-- Pakhtakor -->
                       <li class="camino linea-r to-buny1"></li>
                       <li class="camino linea-r to-buny2"></li>
-                      <li class="parada linea-r buny-desp"><span class="etiquetas">Bunyodkor</span></li> <!-- Bunyodkor -->
+                      <li class="parada linea-r buny-desp"><span class="etiqueta-rbuny">Bunyodkor</span></li> <!-- Bunyodkor -->
                       <li class="camino linea-r to-milli"></li>
-                      <li class="parada linea-r milli-desp"><span class="etiquetas">Milliy Bog</span></li> <!-- Milliy Bog -->
+                      <li class="parada linea-r milli-desp"><span class="etiqueta-rmilli">Milliy Bog</span></li> <!-- Milliy Bog -->
                       <li class="camino linea-r to-novza"></li>
-                      <li class="parada linea-r novza-desp"><span class="etiquetas">Novza</span></li>  <!-- Novza -->
+                      <li class="parada linea-r novza-desp"><span class="etiqueta-rnovza">Novza</span></li>  <!-- Novza -->
                       <li class="camino linea-r to-mirzo"></li>
-                      <li class="parada linea-r mirzo-desp"><span class="etiquetas">Mirzo</span></li> <!-- Mirzo Ulugbek -->
+                      <li class="parada linea-r mirzo-desp"><span class="etiqueta-rmirzo">Mirzo Ulugbek</span></li> <!-- Mirzo Ulugbek -->
                       <li class="camino linea-r to-chil"></li>
-                      <li class="parada linea-r chil-desp"><span class="etiquetas">Buyuk</span></li> <!-- Chilonzor -->
+                      <li class="parada linea-r chil-desp"><span class="etiqueta-rmilli">Chilonzor</span></li> <!-- Chilonzor -->
                       <li class="camino linea-r to-olma"></li>
-                      <li class="parada linea-r olm-desp"><span class="etiquetas">Buyuk</span></li> <!-- Olmazor -->
+                      <li class="parada linea-r olm-desp"><span class="etiqueta-rmilli">Olmazor</span></li> <!-- Olmazor -->
                   </ul>
               </div>
 
               <!-- Linea verde -->
               <div class="col">
                   <ul class="m-4 l-yun">
-                      <li class="parada linea-v"><span class="etiquetas-v">Shakhriston</span></li> <!-- Shakhriston -->
+                      <li class="parada linea-v"><span class="etiqueta-v">Shakhriston</span></li> <!-- Shakhriston -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li> <!-- Bodomzor -->
+                      <li class="parada linea-v"><span class="etiqueta-v">Bodomzor</span></li> <!-- Bodomzor -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li> <!-- Minor -->
+                      <li class="parada linea-v"><span class="etiqueta-v">Minor</span></li> <!-- Minor -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li> <!-- Abdulla Kodiriy -->
+                      <li class="parada linea-v"><span class="etiqueta-v">Abdulla <br> Kodiriy</span></li> <!-- Abdulla Kodiriy -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li> <!-- Yunus Rajabiy -->
+                      <li class="parada linea-v"><span class="etiqueta-vbot">Yunus Rajabiy</span></li> <!-- Yunus Rajabiy -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li> <!-- Ming Urik -->
+                      <li class="parada linea-v"><span class="etiqueta-vbot">Ming Urik</span></li> <!-- Ming Urik -->
                   </ul>
               </div>
               <!-- Linea azul -->
               <div class="col">
                   <ul class="m-4 l-uzb">
-                    <li class="parada linea-a"></li> <!--Dostlik -->
+                    <li class="parada linea-a"><span class="etiqueta-a">Dostlik</span></li> <!--Dostlik -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"></li> <!--Mashinasozlar -->
+                    <li class="parada linea-a"><span class="etiqueta-a">Mashinasozlar</span></li> <!--Mashinasozlar -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"></li> <!--Toshkent -->
+                    <li class="parada linea-a"><span class="etiqueta-a">Toshkent</span></li> <!--Toshkent -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"></li> <!--Kosmonavtlar -->
+                    <li class="parada linea-a"><span class="etiqueta-a">Oybek</span></li> <!--Oybek -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"></li> <!--Uzbekistan -->
+                    <li class="parada linea-a"><span class="etiqueta-a">Kosmonavtlar</span></li> <!--Kosmonavtlar -->
                     <li class="camino linea-a to-uzb"></li>
-                    <li class="parada linea-a uzbekistan-desp"></li> <!--Alisher Navoi-->
+                    <li class="parada linea-a uzbekistan-desp"><span class="etiqueta-auzb">Uzbekistan</span></li> <!--Uzbekistan -->
                     <li class="camino linea-a to-pak"></li>
-                    <li class="parada linea-a pakhtakor-desp"></li> <!--Gafur Gulom -->
+                    <li class="parada linea-a pakhtakor-desp"><span class="etiqueta-auzb">Alisher Navoi</span></li> <!--Alisher Navoi -->
                     <li class="camino linea-a to-gaf"></li>
-                    <li class="parada linea-a gafur-desp"></li> <!--Chorsu -->
+                    <li class="parada linea-a gafur-desp"><span class="etiqueta-agafur">Gafur Gulom</span></li> <!--Gafur Gulom -->
                     <li class="camino linea-a to-cho"></li>
-                    <li class="parada linea-a chorsu-desp"></li> <!--Tinchlik -->
+                    <li class="parada linea-a chorsu-desp"><span class="etiqueta-a">Chorsu</span></li> <!--Chorsu -->
                     <li class="camino linea-a to-tin"></li>
-                    <li class="parada linea-a tin-desp"></li>
+                    <li class="parada linea-a tin-desp"><span class="etiqueta-a">Tinchlik</span></li> <!--Tinchlik -->
                     <li class="camino linea-a to-ber"></li>
-                    <li class="parada linea-a beruni-desp"></li> <!--Beruni -->
+                    <li class="parada linea-a beruni-desp"><span class="etiqueta-a">Beruni</span></li> <!--Beruni -->
                   </ul>
               </div>
           </div>
