Mapa Tashkent con etiquetas

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -175,15 +175,15 @@
               <!-- Linea azul -->
               <div class="col">
                   <ul class="m-4 l-uzb">
-                    <li class="parada linea-a"><span class="etiqueta-a">Dostlik</span></li> <!--Dostlik -->
+                    <li class="parada linea-a"><span class="etiqueta-ados">Dostlik</span></li> <!--Dostlik -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-a">Mashinasozlar</span></li> <!--Mashinasozlar -->
+                    <li class="parada linea-a"><span class="etiqueta-amash">Mashinasozlar</span></li> <!--Mashinasozlar -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-a">Toshkent</span></li> <!--Toshkent -->
+                    <li class="parada linea-a"><span class="etiqueta-atosh">Toshkent</span></li> <!--Toshkent -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-a">Oybek</span></li> <!--Oybek -->
+                    <li class="parada linea-a"><span class="etiqueta-aoyb">Oybek</span></li> <!--Oybek -->
                     <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-a">Kosmonavtlar</span></li> <!--Kosmonavtlar -->
+                    <li class="parada linea-a"><span class="etiqueta-akos">Kosmonavtlar</span></li> <!--Kosmonavtlar -->
                     <li class="camino linea-a to-uzb"></li>
                     <li class="parada linea-a uzbekistan-desp"><span class="etiqueta-auzb">Uzbekistan</span></li> <!--Uzbekistan -->
                     <li class="camino linea-a to-pak"></li>
