--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -128,74 +128,74 @@
               <!-- Linea roja -->
               <div class="col">
                   <ul class="m-4 l-chil">
-                      <li class="parada linea-r buyuk-desp"><span class="etiqueta-rbuyuk">Buyuk Ipak Yuli</span></li> <!-- Buyuk Ipak Yuli -->
-                      <li class="camino linea-r to-push"></li>
-                      <li class="parada linea-r pushkin-desp"><span class="etiqueta-rbuyuk">Pushkin</span></li> <!-- Pushkin -->
-                      <li class="camino linea-r to-khamid"></li>
-                      <li class="parada linea-r khamid-desp"><span class="etiqueta-rbuyuk">Khamid Alimjan</span></li> <!-- Khamid Alimjan -->
-                      <li class="camino linea-r to-amir1"></li>
-                      <li class="camino linea-r to-amir2"></li>
-                      <li class="parada linea-r"><span class="etiqueta-ramir">Amir Temur Hiyoboni</span></li> <!-- Amir Temur Hiyoboni -->
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"><span class="etiqueta-rmayd">Mustakillik Maydoni</span></li> <!-- Mustakillik Maydoni -->
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"><span class="etiqueta-rpak">Pakhtakor</span></li> <!-- Pakhtakor -->
-                      <li class="camino linea-r to-buny1"></li>
-                      <li class="camino linea-r to-buny2"></li>
-                      <li class="parada linea-r buny-desp"><span class="etiqueta-rbuny">Bunyodkor</span></li> <!-- Bunyodkor -->
-                      <li class="camino linea-r to-milli"></li>
-                      <li class="parada linea-r milli-desp"><span class="etiqueta-rmilli">Milliy Bog</span></li> <!-- Milliy Bog -->
-                      <li class="camino linea-r to-novza"></li>
-                      <li class="parada linea-r novza-desp"><span class="etiqueta-rnovza">Novza</span></li>  <!-- Novza -->
-                      <li class="camino linea-r to-mirzo"></li>
-                      <li class="parada linea-r mirzo-desp"><span class="etiqueta-rmirzo">Mirzo Ulugbek</span></li> <!-- Mirzo Ulugbek -->
-                      <li class="camino linea-r to-chil"></li>
-                      <li class="parada linea-r chil-desp"><span class="etiqueta-rmilli">Chilonzor</span></li> <!-- Chilonzor -->
-                      <li class="camino linea-r to-olma"></li>
-                      <li class="parada linea-r olm-desp"><span class="etiqueta-rmilli">Olmazor</span></li> <!-- Olmazor -->
+                      <li id="13_28" class="parada linea-r buyuk-desp"><span class="etiqueta-rbuyuk">Buyuk Ipak Yuli</span></li> <!-- Buyuk Ipak Yuli -->
+                      <li id="13_27" class="camino linea-r to-push"></li>
+                      <li id="13_26" class="parada linea-r pushkin-desp"><span class="etiqueta-rbuyuk">Pushkin</span></li> <!-- Pushkin -->
+                      <li id="13_25" class="camino linea-r to-khamid"></li>
+                      <li id="13_24" class="parada linea-r khamid-desp"><span class="etiqueta-rbuyuk">Khamid Alimjan</span></li> <!-- Khamid Alimjan -->
+                      <li id="13_23" class="camino linea-r to-amir1"></li>
+                      <li id="13_23" class="camino linea-r to-amir2"></li>
+                      <li id="13_22" class="parada linea-r"><span class="etiqueta-ramir">Amir Temur Hiyoboni</span></li> <!-- Amir Temur Hiyoboni -->
+                      <li id="13_21" class="camino linea-r"></li>
+                      <li id="13_20" class="parada linea-r"><span class="etiqueta-rmayd">Mustakillik Maydoni</span></li> <!-- Mustakillik Maydoni -->
+                      <li id="13_19" class="camino linea-r"></li>
+                      <li id="13_18" class="parada linea-r"><span class="etiqueta-rpak">Pakhtakor</span></li> <!-- Pakhtakor -->
+                      <li id="13_17" class="camino linea-r to-buny1"></li>
+                      <li id="13_17" class="camino linea-r to-buny2"></li>
+                      <li id="13_16" class="parada linea-r buny-desp"><span class="etiqueta-rbuny">Bunyodkor</span></li> <!-- Bunyodkor -->
+                      <li id="13_15" class="camino linea-r to-milli"></li>
+                      <li id="13_14" class="parada linea-r milli-desp"><span class="etiqueta-rmilli">Milliy Bog</span></li> <!-- Milliy Bog -->
+                      <li id="13_13" class="camino linea-r to-novza"></li>
+                      <li id="13_12" class="parada linea-r novza-desp"><span class="etiqueta-rnovza">Novza</span></li>  <!-- Novza -->
+                      <li id="13_11" class="camino linea-r to-mirzo"></li>
+                      <li id="13_10" class="parada linea-r mirzo-desp"><span class="etiqueta-rmirzo">Mirzo Ulugbek</span></li> <!-- Mirzo Ulugbek -->
+                      <li id="13_9" class="camino linea-r to-chil"></li>
+                      <li id="13_8" class="parada linea-r chil-desp"><span class="etiqueta-rmilli">Chilonzor</span></li> <!-- Chilonzor -->
+                      <li id="13_7" class="camino linea-r to-olma"></li>
+                      <li id="13_6" class="parada linea-r olm-desp"><span class="etiqueta-rmilli">Olmazor</span></li> <!-- Olmazor -->
                   </ul>
               </div>
 
               <!-- Linea verde -->
               <div class="col">
                   <ul class="m-4 l-yun">
-                      <li class="parada linea-v"><span class="etiqueta-v">Shakhriston</span></li> <!-- Shakhriston -->
-                      <li class="camino linea-v"></li>
-                      <li class="parada linea-v"><span class="etiqueta-v">Bodomzor</span></li> <!-- Bodomzor -->
-                      <li class="camino linea-v"></li>
-                      <li class="parada linea-v"><span class="etiqueta-v">Minor</span></li> <!-- Minor -->
-                      <li class="camino linea-v"></li>
-                      <li class="parada linea-v"><span class="etiqueta-v">Abdulla <br> Kodiriy</span></li> <!-- Abdulla Kodiriy -->
-                      <li class="camino linea-v"></li>
-                      <li class="parada linea-v"><span class="etiqueta-vbot">Yunus Rajabiy</span></li> <!-- Yunus Rajabiy -->
-                      <li class="camino linea-v"></li>
-                      <li class="parada linea-v"><span class="etiqueta-vbot">Ming Urik</span></li> <!-- Ming Urik -->
+                      <li id="5_22" class="parada linea-v"><span class="etiqueta-v">Shakhriston</span></li> <!-- Shakhriston -->
+                      <li id="6_22" class="camino linea-v"></li>
+                      <li id="7_22" class="parada linea-v"><span class="etiqueta-v">Bodomzor</span></li> <!-- Bodomzor -->
+                      <li id="8_22" class="camino linea-v"></li>
+                      <li id="9_22" class="parada linea-v"><span class="etiqueta-v">Minor</span></li> <!-- Minor -->
+                      <li id="10_22" class="camino linea-v"></li>
+                      <li id="11_22" class="parada linea-v"><span class="etiqueta-v">Abdulla <br> Kodiriy</span></li> <!-- Abdulla Kodiriy -->
+                      <li id="12_22" class="camino linea-v"></li>
+                      <li class="parada linea-v"><span class="etiqueta-vyunus">Yunus Rajabiy</span></li> <!-- Yunus Rajabiy -->
+                      <li id="14_22" class="camino linea-v"></li>
+                      <li class="parada linea-v"><span class="etiqueta-vming">Ming Urik</span></li> <!-- Ming Urik -->
                   </ul>
               </div>
               <!-- Linea azul -->
               <div class="col">
                   <ul class="m-4 l-uzb">
-                    <li class="parada linea-a"><span class="etiqueta-ados">Dostlik</span></li> <!--Dostlik -->
-                    <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-amash">Mashinasozlar</span></li> <!--Mashinasozlar -->
-                    <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-atosh">Toshkent</span></li> <!--Toshkent -->
-                    <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-aoyb">Oybek</span></li> <!--Oybek -->
-                    <li class="camino linea-a"></li>
-                    <li class="parada linea-a"><span class="etiqueta-akos">Kosmonavtlar</span></li> <!--Kosmonavtlar -->
-                    <li class="camino linea-a to-uzb"></li>
-                    <li class="parada linea-a uzbekistan-desp"><span class="etiqueta-auzb">Uzbekistan</span></li> <!--Uzbekistan -->
-                    <li class="camino linea-a to-pak"></li>
-                    <li class="parada linea-a pakhtakor-desp"><span class="etiqueta-auzb">Alisher Navoi</span></li> <!--Alisher Navoi -->
-                    <li class="camino linea-a to-gaf"></li>
-                    <li class="parada linea-a gafur-desp"><span class="etiqueta-agafur">Gafur Gulom</span></li> <!--Gafur Gulom -->
-                    <li class="camino linea-a to-cho"></li>
-                    <li class="parada linea-a chorsu-desp"><span class="etiqueta-a">Chorsu</span></li> <!--Chorsu -->
-                    <li class="camino linea-a to-tin"></li>
-                    <li class="parada linea-a tin-desp"><span class="etiqueta-a">Tinchlik</span></li> <!--Tinchlik -->
-                    <li class="camino linea-a to-ber"></li>
-                    <li class="parada linea-a beruni-desp"><span class="etiqueta-a">Beruni</span></li> <!--Beruni -->
+                    <li id="15_28" class="parada linea-a"><span class="etiqueta-ados">Dostlik</span></li> <!--Dostlik -->
+                    <li id="15_27" class="camino linea-a"></li>
+                    <li id="15_26" class="parada linea-a"><span class="etiqueta-amash">Mashinasozlar</span></li> <!--Mashinasozlar -->
+                    <li id="15_25" class="camino linea-a"></li>
+                    <li id="15_24" class="parada linea-a"><span class="etiqueta-atosh">Toshkent</span></li> <!--Toshkent -->
+                    <li id="15_23" class="camino linea-a"></li>
+                    <li id="15_22" class="parada linea-a"><span class="etiqueta-aoyb">Oybek</span></li> <!--Oybek -->
+                    <li id="15_21" class="camino linea-a"></li>
+                    <li id="15_20" class="parada linea-a"><span class="etiqueta-akos">Kosmonavtlar</span></li> <!--Kosmonavtlar -->
+                    <li id="15_19" class="camino linea-a to-uzb"></li>
+                    <li id="15_18" class="parada linea-a uzbekistan-desp"><span class="etiqueta-auzb">Uzbekistan</span></li> <!--Uzbekistan -->
+                    <li id="15_17" class="camino linea-a to-pak"></li>
+                    <li id="" class="parada linea-a pakhtakor-desp"><span class="etiqueta-aalish">Alisher Navoi</span></li> <!--Alisher Navoi -->
+                    <li id="12_18" class="camino linea-a to-gaf"></li>
+                    <li id="11_18" class="parada linea-a gafur-desp"><span class="etiqueta-agafur">Gafur Gulom</span></li> <!--Gafur Gulom -->
+                    <li id="10_18" class="camino linea-a to-cho"></li>
+                    <li id="9_18" class="parada linea-a chorsu-desp"><span class="etiqueta-a">Chorsu</span></li> <!--Chorsu -->
+                    <li id="8_18" class="camino linea-a to-tin"></li>
+                    <li id="7_18" class="parada linea-a tin-desp"><span class="etiqueta-a">Tinchlik</span></li> <!--Tinchlik -->
+                    <li id="6_18" class="camino linea-a to-ber"></li>
+                    <li id="5_18" class="parada linea-a beruni-desp"><span class="etiqueta-a">Beruni</span></li> <!--Beruni -->
                   </ul>
               </div>
           </div>
