arreglados otros tantos bugs y acabados los extras de total paradas, total distancia y tabla de paradas

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -98,15 +98,15 @@
                     </div>
                     <div class="row">
                         <div class="col-4 bg-light">Total distancia: </div>
-                        <div id="nparadas"class="col-8">Km</div>
+                        <div id="ndistancia"class="col-8">Km</div>
                     </div>
                     <div class="row mt-4">
                         <table class="table">
                             <thead>
-                            <tr class="row col">
-                                <th class="col-2">Nº</th>
-                                <th class="col-10">Parada</th>
-                            </tr>
+                                <tr>
+                                    <th>Nº</th>
+                                    <th>Parada</th>
+                                </tr>
                             </thead>
                             <tbody id='table_tbody'></tbody>
                         </table>
