arreglado el puto problema mas jodido me cago en diossssgit pull && git pushgit pull && git push bien jodehh

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -94,11 +94,11 @@
                     </h3>
                     <div class="row">
                         <div class="col-4 bg-light">Total paradas: </div>
-                        <div id="nparadas"class="col-8">12</div>
+                        <div id="nparadas"class="col-8"></div>
                     </div>
                     <div class="row">
                         <div class="col-4 bg-light">Total distancia: </div>
-                        <div id="ndistancia"class="col-8">Km</div>
+                        <div id="ndistancia"class="col-8"></div>
                     </div>
                     <div class="row mt-4">
                         <table class="table">
