titulo e imagen del header perfectamente cuadrados para cualquier resolucion

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -14,7 +14,7 @@
 <body>
 <div id="header" class="row">
     <img id="header-img" src="images/tashm.png">
-    <div class="centered">Tashkent Metro</div>
+    <img id="header-title" src="images/title-page.png">
 </div>
 <div id="content" class="row">
     <div id="results-container" class="col-4 border-right border-secondary">
