solucion al tema del inicio y fin

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -110,6 +110,8 @@
         </div>
     </div>
     <div class="col-8">
+        <img id="origen-point" class="pointer" src="images/origen.png" width="30px">
+        <img id="destino-point" class="pointer" src="images/destino.png" width="30px">
         <div id="map-container"  class="row mapa">
             <!-- Linea roja -->
             <div class="col">
